--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -4,6 +4,7 @@
 	<div id="push"></div>
 </div>
 <div id="footer-region"></div>
+<div id="dialog-region"></div>
 
 <%= javascript_tag do %>
 	$(function() {
